# skeleton

./: .gitignore  README.md  cycle_docker.sh  docker-compose.yaml  dockerfile.api  dockerfile.frontend  dockerfile.worker  restart_with_clear_db.sh  setup.sh
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy-terraform.yml  deploy-worker.yml
api/: README.md  pyproject.toml  route_server.py  schema.sql  worker.py
api/internal/: __init__.py  auth.py  routes.py
api/internal/static/css/: common.css
api/internal/templates/: base.html  create_user.html  intranet_user.html  login.html  query.html  wq_dashboard.html  wq_job_detail.html  wq_queue.html
api/lib/: config.py  db.py  ids.py  redis.py  test_util.py  time.py  wq.py
api/models/: items.py  users.py
api/routes/: item_routes.py  user_routes.py
frontend/: bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: env.ts  main.tsx  router.tsx
frontend/src/components/: Login.tsx
frontend/src/components/sidebar/: app-sidebar.tsx  nav-secondary.tsx  nav-tabs.tsx
frontend/src/components/ui_lib/: Box.tsx  RequestButton.tsx
frontend/src/lib/: api.ts  time.ts  user.ts
frontend/src/routes/: __root.tsx  index.tsx  login.tsx
tf/: backend.tf  main.tf  variables.tf
tf/modules/service/: alb.tf  api_gateway.tf  ecr.tf  ecs.tf  network.tf  rds.tf  redis.tf  route53.tf  security.tf  variables.tf
tf/modules/static_site/: acm.tf  cloudfront.tf  iam.tf  route53.tf  s3.tf  variables.tf
