[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.8",
    "mypy>=1.15.0",
    "passlib>=1.7.4",
    "asyncpg>=0.30.0",
    "pyjwt>=2.10.1",
    "pylint>=3.3.6",
    "redis>=6.2.0",
    "types-passlib>=1.7.7.20250401",
    "itsdangerous>=2.1.2",
]
